Fixed a IE7-incompatibility regarding the positioning of the menus tab content (@#main-menu@).
The CSS position-declarations has been changed from @position: inherit;@ to @position: static;@.

This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@74 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -107,7 +107,7 @@ html>body #content {
 /***** The menus tab *****/
 #main #leftmenu-default #leftmenu #tab-content-menus-tab  #main-menu {
   margin-right: 0px;
-  position: inherit;
+  position: static;
 }
 #main #leftmenu-default #leftmenu #tab-content-menus-tab  #main-menu ul li {
   float:none;
@@ -247,7 +247,7 @@ html>body #content {
 /***** The menus tab *****/
 #main #leftmenu-alternate #leftmenu #tab-content-menus-tab  #main-menu {
   margin-right: 0px;
-  position: inherit;
+  position: static;
 }
 #main #leftmenu-alternate #leftmenu #tab-content-menus-tab  #main-menu ul li {
   float:none;
@@ -387,7 +387,7 @@ html>body #content {
 /***** The menus tab *****/
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu {
   margin-right: 0px;
-  position: inherit;
+  position: static;
 }
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu ul li {
   float:none;
@@ -527,7 +527,7 @@ html>body #content {
 /***** The menus tab *****/
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu {
   margin-right: 0px;
-  position: inherit;
+  position: static;
 }
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu ul li {
   float:none;
@@ -683,7 +683,7 @@ html>body #content {
 /***** The menus tab *****/
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu {
   margin-right: 0px;
-  position: inherit;
+  position: static;
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu ul li {
   float:none;
