Fixed faulty controller-component in link-elements of the global activity link in the menus tab.
This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@75 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_menus.rhtml
+++ b/app/views/left_menu/_menus.rhtml
@@ -13,6 +13,6 @@
 <div id="main-menu">
     <ul>
         <li><%= link_to_unless_current l(:label_issue_view_all), { :controller => 'issues' } %></li>
-        <li><%= link_to_unless_current l(:label_overall_activity), { :controller => 'projects', :action => 'activity' }%></li>
+        <li><%= link_to_unless_current l(:label_overall_activity), { :controller => 'activity' }%></li>
     </ul>
 </div>
