Added @margin-bottom: 5em;@ CSS-declaration to all themes to create some space between the tab-contents and the bottom-view.
This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@76 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -46,6 +46,7 @@ html>body #content {
 
 /***** The actual sidebar wherein tabs reside *****/
 #main #leftmenu-default #leftmenu #leftmenu-contents {
+    margin-bottom: 5em;
     position: relative;
     width: 210px;
 }
@@ -186,6 +187,7 @@ html>body #content {
 
 /***** The actual sidebar wherein tabs reside *****/
 #main #leftmenu-alternate #leftmenu #leftmenu-contents {
+    margin-bottom: 5em;
     position: relative;
     width: 210px;
 }
@@ -326,6 +328,7 @@ html>body #content {
 
 /***** The actual sidebar wherein tabs reside *****/
 #main #leftmenu-classic #leftmenu #leftmenu-contents {
+    margin-bottom: 5em;
     position: relative;
     width: 210px;
 }
@@ -466,6 +469,7 @@ html>body #content {
 
 /***** The actual sidebar wherein tabs reside *****/
 #main #leftmenu-basecamp #leftmenu #leftmenu-contents {
+    margin-bottom: 5em;
     position: relative;
     width: 210px;
 }
@@ -606,6 +610,7 @@ html>body #content {
 
 /***** The actual sidebar wherein tabs reside *****/
 #main #leftmenu-squeejee #leftmenu #leftmenu-contents {
+    margin-bottom: 5em;
     position: relative;
     width: 210px;
 }
