--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -401,9 +401,10 @@ html>body #content {
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a {
   display: block;
   color: #2A5685;
+  background-color: #fff;
   text-decoration: none;
   padding: 4px 10px 4px 0px;
-  font-weight: normal;
+  font-weight: bold;
 }
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a:hover {
   background:#fff;
@@ -424,10 +425,10 @@ html>body #content {
 }
 #main #leftmenu-classic #leftmenu #tab-content-projects-tab li a {
     display: block;
-    color: #2A5685;
+    color: #467AA7;
     text-decoration: none;
     padding: 4px 10px 4px 0px;
-    font-weight: normal;
+    font-weight: bold;
 }
 #main #leftmenu-classic #leftmenu #tab-content-projects-tab li a:hover {
     background: #fff;
