Completed implementation of the styling of the menus tab for the Classic theme.
This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@80 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -400,11 +400,12 @@ html>body #content {
 
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a {
   display: block;
-  color: #2A5685;
+  color: #467AA7;
   background-color: #fff;
   text-decoration: none;
   padding: 4px 10px 4px 0px;
   font-weight: bold;
+  font-size:100%;
 }
 #main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a:hover {
   background:#fff;
