--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -533,6 +533,7 @@ html>body #content {
 
 /***** The menus tab *****/
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu {
+  margin-left: 0px;
   margin-right: 0px;
   position: static;
 }
@@ -543,18 +544,19 @@ html>body #content {
 
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a {
   display: block;
+  background-color:#eee;
   color: #2A5685;
   text-decoration: none;
   padding: 4px 10px 4px 0px;
   font-weight: normal;
 }
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a:hover {
-  background:#fff;
+  background:#eee;
   color:#C61A1A;
 }
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a.selected,
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a.selected:hover {
-  background:#fff;
+  background:#eee;
   color:#555;
 }
 
@@ -573,12 +575,12 @@ html>body #content {
     font-weight: normal;
 }
 #main #leftmenu-basecamp #leftmenu #tab-content-projects-tab li a:hover {
-    background: #fff;
+    background: #eee;
     color: #C61A1A;
 }
 #main #leftmenu-basecamp #leftmenu #tab-content-projects-tab li a.selected,
 #main #leftmenu-basecamp #leftmenu #tab-content-projects-tab li a.selected:hover {
-    background: #fff;
+    background: #eee;
     color: #555;
 }
 
