Implemented styling of the projects tabs for the Squeejee theme.
This commit references issue #245.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@82 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -726,17 +726,17 @@ html>body #content {
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-projects-tab li a {
     display: block;
-    color: #2A5685;
+    color: #8C8C8C;
     text-decoration: none;
     padding: 4px 10px 4px 0px;
-    font-weight: normal;
+    font-weight: bold;
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-projects-tab li a:hover {
-    background: #fff;
-    color: #C61A1A;
+    background: #333;
+    color: #B3B3B3;
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-projects-tab li a.selected,
 #main #leftmenu-squeejee #leftmenu #tab-content-projects-tab li a.selected:hover {
-    background: #fff;
-    color: #555;
+    background: #333;
+    color: #B3B3B3;
 }
