--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -702,19 +702,19 @@ html>body #content {
 
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu li a {
   display: block;
-  color: #2A5685;
+  color: #8C8C8C;
+  background-color: #333;
   text-decoration: none;
-  padding: 4px 10px 4px 0px;
-  font-weight: normal;
+  font-weight: bold;
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu li a:hover {
-  background:#fff;
-  color:#C61A1A;
+  background-color:#333;
+  color:#B3B3B3;
 }
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu li a.selected,
 #main #leftmenu-squeejee #leftmenu #tab-content-menus-tab  #main-menu li a.selected:hover {
-  background:#fff;
-  color:#555;
+  background-color:#333;
+  color:#B3B3B3;
 }
 
 /***** The projects tab *****/
