Moved global menu links code from @_menus@-partial to a dedicated @CollapseApplicationHelperPatch@ library-method named @render_global_menu@.
This also implements the @.alt-selected@-class on the @a@-elements, in the global menu links code in the new @CollapseApplicationHelperPatch@ library-method named @render_global_menu@, instead of using the @link_to_unless_current@-method.

This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@87 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/left_menu/_menus.rhtml
+++ b/app/views/left_menu/_menus.rhtml
@@ -11,8 +11,5 @@
 
 <h4><%= l(:label_global_menu) %></h4>
 <div id="main-menu">
-    <ul>
-        <li><%= link_to_unless_current l(:label_issue_view_all), { :controller => 'issues', :id => nil } %></li>
-        <li><%= link_to_unless_current l(:label_overall_activity), { :controller => 'projects', :action => 'activity', :id => nil }%></li>
-    </ul>
+    <%= render_global_menu %>
 </div>
