Completed implementation of the styling of the global menu links on the menus tab for the Default-, Alternate-, Classic- and Basecamp-theme.
This includes:
* [menus tab] added @background@ and @color@-declarations on @a.alt-selected@ & @a.alt-selected:hover@ selectors

This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@91 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -131,6 +131,11 @@ html>body #content {
   background:#fff;
   color:#555;
 }
+#main #leftmenu-default #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected,
+#main #leftmenu-default #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected:hover {
+  background: #fff;
+  color: #555;
+}
 
 /***** The projects tab *****/
 #main #leftmenu-default #leftmenu #tab-content-projects-tab div#projects-tree {
@@ -272,6 +277,11 @@ html>body #content {
 #main #leftmenu-alternate #leftmenu #tab-content-menus-tab  #main-menu li a.selected:hover {
   background:#eee;
   color:#555;
+}
+#main #leftmenu-alternate #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected,
+#main #leftmenu-alternate #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected:hover {
+  background: #eee;
+  color: #555;
 }
 
 /***** The projects tab *****/
@@ -416,6 +426,11 @@ html>body #content {
   background:#fff;
   color:#555;
 }
+#main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected,
+#main #leftmenu-classic #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected:hover {
+  background: #fff;
+  color: #555;
+}
 
 /***** The projects tab *****/
 #main #leftmenu-classic #leftmenu #tab-content-projects-tab div#projects-tree {
@@ -558,6 +573,11 @@ html>body #content {
 #main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a.selected:hover {
   background:#eee;
   color:#555;
+}
+#main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected,
+#main #leftmenu-basecamp #leftmenu #tab-content-menus-tab  #main-menu li a.alt-selected:hover {
+  background: #eee;
+  color: #555;
 }
 
 /***** The projects tab *****/
