Made the height of the header depending on if the main-menu is rendered through the @base@-view or not. It looses height (fixed to @3em@) if the main-menu is not rendered.
This commit references issue #180.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/sandbox/140409_1033-MenusTab@92 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -30,7 +30,11 @@
         <%= render_menu :top_menu -%>
     </div>
     
-    <div id="header">
+    <% if Setting.plugin_redmine_collapse['show_menus_tab'] == '1' && Setting.plugin_redmine_collapse['show_projectmenu_in_menustab'] == '1' %>
+        <div id="header" class="withoutmainmenu">
+    <% else %>
+        <div id="header">
+    <% end %>
         <div id="quick-search">
             <% form_tag({:controller => 'search', :action => 'index', :id => @project}, :method => :get ) do %>
                 <%= link_to l(:label_search), {:controller => 'search', :action => 'index', :id => @project}, :accesskey => accesskey(:search) %>:
