Fixed positioning of @* #leftmenu-border@-image for the Default and the Squeejee theme.
This commit references issue #251.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@97 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -39,7 +39,7 @@ html>body #content {
 #main #leftmenu-default #leftmenu #leftmenu-border {
     position: absolute;
     right: -5px;
-    top: 35px;
+    top: 2.95em;
     height: 95%;
     width: 5px;
     background-image: url(../images/border_collapse.gif);
@@ -628,7 +628,7 @@ html>body #content {
 #main #leftmenu-squeejee #leftmenu #leftmenu-border {
     position: absolute;
     right: -5px;
-    top: 38px;
+    top: 2.88em;
     height: 95%;
     width: 5px;
     background-image: url(../images/border_collapse.gif);
