Fixed positioning of the @* #leftmenu-border@-image for the Alternate theme.
This commit references issue #251.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@98 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -185,7 +185,7 @@ html>body #content {
 #main #leftmenu-alternate #leftmenu #leftmenu-border {
     position: absolute;
     right: -5px;
-    top: 23px;
+    top: 1.93em;
     height: 95%;
     width: 5px;
     background-image: url(../images/border_collapse.gif);
