Fixed positioning of the @* #leftmenu-border@-image for the Classic theme.
This commit references issue #251.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@99 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -332,7 +332,7 @@ html>body #content {
 #main #leftmenu-classic #leftmenu #leftmenu-border {
     position: absolute;
     right: -5px;
-    top: 31px;
+    top: 2.95em;
     height: 95%;
     width: 5px;
     background-image: url(../images/border_collapse.gif);
