Fixed the nasty positioning-error of the @leftmenu@ on all browsers with the Basecamp-theme.
This commit references issue #250.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@121 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -476,6 +476,7 @@ html>body #content {
     min-height: 600px;
     padding: 0;
     position: relative;
+    margin-left: -14px;
     margin-right: 15px;
 }
 
